# cyclone

./: .gitignore  CMakeLists.txt  Creating a web-like experience for Cyclone - desktop.docx  Dockerfile  LICENSE  Makefile  README.md
algorun_info/: manifest.json
algorun_info/input_example/: input.txt
algorun_info/output_example/: output.txt  statespace.dot  summary.txt
cyclone_examples/: Makefile  eg1.input  eg2.dot-correct  eg2.tables-correct  eqn2_55.dot-correct  eqn2_55.input
cyclone_examples/bad/: input1.txt  input2.txt  input3.txt
new-cyclone-examples/: Makefile  eg-10-vars.pds  eg3.pds  eg4.pds  eg5.pds
old/: README.md
old/algorun_info/: manifest.json
old/src/: Cyclone.rb  PDS.cpp  PDS.h  Table.h  cyclone.cpp  shell.cpp
src/: CMakeLists.txt  Cyclone.rb  Polynomial.cpp  Polynomial.hpp  PolynomialFDS.cpp  PolynomialFDS.hpp  State.hpp  TODO.md  Table.cpp  TableFDS.hpp  constants.h  cyclone.cpp  cyclone.h  examples.cpp  examples.hpp  main.cpp  pds-to-tables.py  run.py  runner.sh  shell.cpp  test.cpp  utilities.cpp  utilities.h
src-new/: CMakeLists.txt  PDS.hpp  Polynomial.cpp  Polynomial.hpp  PolynomialFDS.cpp  PolynomialFDS.hpp  State.hpp  examples.cpp  examples.hpp  main.cpp
test/: sample-input-for-cyclone.json  sample-input-for-cyclone.raw.txt  sample-output-for-cyclone-edges.json  sample-output-for-cyclone-edges.raw.txt  sample-output-for-cyclone-trajectory.json  sample-output-for-cyclone-trajectory.raw.txt
test/boolean-models-from-claus/models_cell_collective/__MACOSX/: ._Apoptosis Network_19422837.txt  ._Aurora Kinase A in Neuroblastoma_26616283.txt  ._BT474 Breast Cell Line Long-term ErbB Network_24970389.txt  ._BT474 Breast Cell Line Short-term ErbB Network_24970389.txt  ._Body Segmentation in Drosophila 2013_23520449.txt  ._Bordetella bronchiseptica_22253585.txt  ._Budding Yeast Cell Cycle_23049686.txt  ._CD4+ T cell Differentiation_22871178.txt  ._Cell Cycle Transcription by Coupled CDK and Network Oscillators_18463633.txt  ._Colitis-associated colon cancer_26446703.txt  ._Cortical Area Development_20862356.txt  ._Death Receptor Signaling_20221256.txt  ._EGFR & ErbB Signaling_19662154.txt  ._ErbB (1-4) Receptor Signaling_23637902.txt  ._FGF pathway of Drosophila Signaling Pathways_23868318.txt  ._HCC1954 Breast Cell Line Short-term ErbB Network_24970389.txt  ._HH Pathway of Drosophila Signaling Pathways_23868318.txt  ._IGVH mutations in chronic lymphocytic leukemia_26088082.txt  ._IL-1 Signaling_21968890.txt  ._IL-6 Signaling_21968890.txt  ._Lac Operon_21563979.txt  ._MAPK Cancer Cell Fate Network_24250280.txt  ._Mammalian Cell Cycle 2006_16873462.txt  ._Mammalian Cell Cycle_19118495.txt  ._PC12 Cell Differentiation_27148350.txt  ._Processing of Spz Network from the Drosophila Signaling Pathway_23868318.txt  ._Regulation of the L-arabinose operon of Escherichia coli_28639170.txt  ._Senescence Associated Secretory Phenotype_29206223.txt  ._T-Cell Signaling 2006_16464248.txt  ._T-LGL Survival Network 2008_18852469.txt  ._T-LGL Survival Network 2011 Reduced Network_22102804.txt  ._T-LGL Survival Network 2011_22102804.txt  ._Toll Pathway of Drosophila Signaling Pathway_23868318.txt  ._Trichostrongylus retortaeformis_22253585.txt  ._VEGF Pathway of Drosophila Signaling Pathway_23868318.txt  ._Wg Pathway of Drosophila Signalling Pathways_23868318.txt  ._fMRI - Regulation of the Lac Operon_25790483.txt  ._manual_mod_Treatment of Castration-Resistant Prostate Cancer_28361666.txt
test/boolean-models-from-claus/new_Boolean_network_models/: 16968132.txt  25780058_tabular.txt  26244885.txt  manual_mod_21639591.txt
test/boolean-models-from-claus/new_Boolean_network_models/__MACOSX/: ._11082279.txt  ._16464248_signaling_pathway.txt  ._16968132.txt  ._1753781.txt  ._18194572.txt  ._19524598.txt  ._19622164_TGF_alpha.txt  ._19622164_TGF_beta1.txt  ._20169167.txt  ._20659480.txt  ._21563979.txt  ._23169817_high_dna_damage.txt  ._23169817_low_dna_damage.txt  ._23469179.txt  ._23764028.txt  ._24069138_threshold.txt  ._24079299.txt  ._24564942_threshold.txt  ._25063553_AND_AND.txt  ._25063553_OR_AND.txt  ._25063553_OR_OR.txt  ._25163068.txt  ._25189528.txt  ._25980672.txt  ._26244885.txt  ._26346668.txt  ._26564978.txt  ._26603105_tabular.txt  ._27138333.txt  ._27464342_curated_model.txt  ._27613445.txt  ._28187161.txt  ._28209158.txt  ._28426669_ARF10_greater_ARF5.txt  ._28455685.txt  ._29230182.txt  ._29237040.txt  ._29378814.txt  ._29622038.txt  ._30024932.txt  (+14 more)
test/cyclone_examples/: Makefile  eg1.cycles-correct  eg1.tables-correct  eg2.cycles-correct  eg2.input  eqn2_55.cycles-correct  eqn2_55.tables-correct
test/cyclone_examples/bad/: details.txt
test/cyclone_examples/good/: details.txt
test/new-cyclone-examples/: Makefile  eg-20-vars.pds  eg1-limitcycles.txt-compare  eg1-statespace.dot-compare  eg1.pds  eg2-limitcycles.txt-compare  eg2-statespace.dot-compare  eg2.pds  eg3-limitcycles.txt-compare  eg3-statespace.dot-compare  eg6.pds  ym-bool-model.pds
